--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head><title>Mein Praktikum</title></head>
 <body>
     <h1>Hallo aus der Azure Cloud! 🚀</h1>
-    <p>Erstellt während meines Praktikums bei [Dein Firmenname].</p>
+    <p>Erstellt während meines Praktikums bei Gothaer.</p>
 </body>
 </html>
